<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_title">Playlist maker</string>
    <string name="main_button_search">Поиск</string>
    <string name="main_button_media">Медиатека</string>
    <string name="main_button_settings">Настройки</string>
    <string name="settings_title">Настройки</string>
    <string name="settings_dark_theme">Темная тема</string>
    <string name="settings_share_app">Поделиться приложением</string>
    <string name="settings_write_support">Написать в поддержку</string>
    <string name="settings_user_agreement">Пользовательское соглашение</string>
    <string name="go_back">Назад</string>
    <string name="android_course_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="email_yapr_support">praktikum@support.yandex.ru</string>
    <string name="email_subject_support">Сообщение разработчикам и разработчицам приложения Playlist Make</string>
    <string name="email_text_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="url_user_agreement_yand_prac">https://yandex.ru/legal/practicum_offer/</string>
    <string name="et_search_hint">Поиск</string>
    <string name="title_tv_search">Поиск</string>
    <string name="album_title_and_track_time_template">%s • %s</string>
    <string name="artwork_content_description">Изображение альбома</string>
    <string name="go_to_track_content_description">Перейти к треку</string>
    <string name="search_button_update">Обновить</string>
    <string name="search_img_update_descr">Ничего не нашлось</string>
    <string name="search_tv_update">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_btn_update_text">Обновить</string>
    <string name="search_img_notfound_descr">Ничего не нашлось</string>
    <string name="search_tv_notfound_text">Ничего не нашлось</string>
    <string name="search_btn_clear_history">Очистить историю</string>
    <string name="search_tv_history">Вы искали</string>
</resources>