<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    android:paddingBottom="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/title_margin_horizontal"
        android:layout_marginTop="@dimen/title_margin_top"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/main_title"
        android:textColor="@color/yp_white"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/btn_search"
        style="@style/MainActivityButtonStyle"
        android:text="@string/main_button_search"
        app:icon="@drawable/search" />

    <Button
        android:id="@+id/btn_media"
        style="@style/MainActivityButtonStyle"
        android:text="@string/main_button_media"
        app:icon="@drawable/media" />

    <Button
        android:id="@+id/btn_settings"
        style="@style/MainActivityButtonStyle"
        android:text="@string/main_button_settings"
        app:icon="@drawable/settings" />

</LinearLayout>